# mini-genie

./: .gitignore  README.md  pyproject.toml
configs/: default.py
genie/: __init__.py
genie/data/: __init__.py  coinrun.py
genie/models/: __init__.py  dynamics.py  lam.py  video_tokenizer.py
genie/train/: __init__.py  train_dynamics.py  train_tokenizer.py
scripts/: play.py  train.py
